[package]
name = "pastiche"
version = "0.1.0"
authors = ["Miles Steele <miles@milessteele.com>"]

# https://github.com/rust-lang/cargo/issues/1359
# (doesn't seem to have any performance impact)
# cargo-features = ["always-optimize-deps"]
# always-optimize-deps = true

[dependencies]
colorify = "0.2.3"
find_folder = "0.3.0"
image = "0.23.4"
ocl = "0.19.3"
piston_window = "0.107.0"
rand = "0.7.3"
camera_capture = { git = "https://github.com/mlsteele/camera_capture.git", rev = "98863970e8b6eb3ec4a16a3851ac8990e8af5193" }

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 3
